Bug 552573.  Cache the Unicode responseText.  r=sicking